third_party/move/tools/move-package-manifest/tests/addresses/invalid-address-too-long.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [addresses]
6 | addr1 = "0x00112233445566778899AABBCCDDEEFF00112233445566778899AABBCCDDEEFF00"
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid account address
  |
